fix(css): move header z-index forward
It should hide the board if the board passes underneath.

--- a/app/css/board.css
+++ b/app/css/board.css
@@ -19,6 +19,7 @@ header {
   padding: 0;
   border-bottom: 4px solid #555;
   width: 100%;
+  z-index: 1000;
 }
 
 header > h1 {
